add more english strings

--- a/apis/locales/en/header.json
+++ b/apis/locales/en/header.json
@@ -9,6 +9,7 @@
     "learn": {
         "title": "Learn",
         "rules": "Rules",
+        "rules_summary": "Rules Summary",
         "analysis": "Analysis"
     },
     "tournaments": {
