add more english strings, fix a few typos

--- a/apis/locales/en/profile.json
+++ b/apis/locales/en/profile.json
@@ -5,7 +5,7 @@
         "finished": "Finished"
     },
     "color_buttons": {
-        "both": "All",
+        "both": "Both",
         "white": "White",
         "black": "Black"
     },
