--- a/apis/locales/en/user_config.json
+++ b/apis/locales/en/user_config.json
@@ -46,6 +46,8 @@
         },
         "password": "Password", 
         "confirm_password": "Confirm password", 
+        "password_requirements": "At least 8 characters",
+        "password_error": "Password too short or does not match",
         "be_nice_checkbox": "I agree to be nice to other players and to report abuse on Discord",
         "signup_button": "Sign up",
         "registration_error": "Registration failed",
@@ -55,6 +57,7 @@
         "email": "Email",
         "password": "Password",
         "login_button": "Sign in",
-        "no_account_prompt": "Don't have an account? <register_link>Sign up</register_link>"
+        "no_account_prompt": "Don't have an account? <register_link>Sign up</register_link>",
+        "invalid_login": "Invalid email or password"
     }
 }
