--- a/apis/locales/de/user_config.json
+++ b/apis/locales/de/user_config.json
@@ -1,1 +1,69 @@
-{}
+{
+    "piece_style": "Figurenstil",
+    "style_buttons": {
+        "official": "Offiziell",
+        "flat": "Flach",
+        "three_d": "Drei-D"
+    },
+    "rotation": "Drehung",
+    "rotation_buttons": {
+        "no": "Nein",
+        "yes": "Ja"
+    },
+    "show_dots": "Punkte anzeigen",
+    "dots_buttons": {
+        "no": "Nein",
+        "angled": "Schräg",
+        "vertical": "Vertikal"
+    },
+    "game_speed": "Spielgeschwindigkeit:",
+    "move_confirm": "Zugbestätigung:",
+    "color_scheme": "Farbschema:",
+    "preview": "Vorschau:",
+
+    "edit_account": {
+        "current_password": "Aktuelles Passwort",
+        "new_password": "Neues Passwort",
+        "confirm_password": "Passwort bestätigen",
+        "confirm_password_placeholder": "Neues Passwort (nochmals)",
+        "save_button": "Speichern"
+    },
+    "create_account": {
+        "username": {
+            "title": "Benutzername",
+            "description": "Bitte wähle einen familienfreundlichen Benutzernamen. Konten mit unangemessenen Benutzernamen werden geschlossen!",
+            "error": {
+                "taken": "Benutzername ist vergeben",
+                "invalid": "Ungültiges Zeichen im Benutzernamen"
+            }
+        },
+        "email": {
+            "title": "E-Mail",
+            "error": {
+                "invalid": "Ungültige E-Mail"
+            },
+            "description": "Wir benötigen deine E-Mail-Adresse, um dir eine Bestätigungs-E-Mail zu senden, wenn du ein Konto erstellst."
+        },
+        "password": "Passwort",
+        "confirm_password": "Passwort bestätigen",
+        "password_requirements": "Mindestens 8 Zeichen",
+        "password_error": "Passwort zu kurz oder stimmt nicht überein",
+        "be_nice_checkbox": "Ich stimme zu, freundlich zu anderen Spieler*innen zu sein und Missbrauch auf Discord zu melden",
+        "signup_button": "Anmelden",
+        "registration_error": "Registrierung fehlgeschlagen",
+        "existing_account_prompt": "Hast du bereits ein Konto? <login_link>Einloggen</login_link>"
+    },
+    "login": {
+        "email": "E-Mail",
+        "password": "Passwort",
+        "login_button": "Einloggen",
+        "no_account_prompt": "Hast du noch kein Konto? <register_link>Registrieren</register_link>",
+        "invalid_login": "Ungültige E-Mail oder Passwort"
+    },
+    "allow_takeback": "Zug zurücknehmen erlauben",
+    "allow_takeback_buttons": {
+        "always": "Immer",
+        "never": "Nie",
+        "casual_only": "Nur im Freizeitspiel"
+    }
+}
