--- a/apis/locales/de/donate.json
+++ b/apis/locales/de/donate.json
@@ -1,1 +1,16 @@
-{}
+{
+    "title": "Free Hive® für alle, für immer!",
+    "subtitle": "Keine Werbung, keine Abonnements, sondern Open-Source und Leidenschaft.",
+    "about": "Wir sind ein Gemeinschaftsprojekt und glauben, dass jeder Zugang zu einer kostenlosen, erstklassigen Hive Plattform haben sollte. Wir sind auf die Unterstützung von Menschen wie dich angewiesen, um das möglich zu machen. Wenn du hivegame gerne nutzt, ziehe bitte in Betracht, uns durch eine Spende zu unterstützen.",
+    "kofi_button": "<kofi_button>Ko-fi</kofi_button>",
+    "patreon_button": "<patreon_button>Patreon</patreon_button>",
+    "where_does_money_go": {
+        "question": "Wohin geht das Geld?",
+        "answer": "Hosting Kosten, vielleicht irgendwann mal an unsere Entwickler."
+    },
+    "features_for_patrons": {
+        "question": "Sind einige Funktionen nur für Patreons reserviert?",
+        "answer": "Nein, hivegame ist für alle Nutzer für immer kostenlos. Aber als Patreon bekommst aber eine 👑."
+    },
+    "small_team_blurb": "Wir sind ein kleines Team, daher macht deine Unterstützung einen riesigen Unterschied!"
+}
