Exposes ro and de, removes very incomplete locales, fixes typo

--- a/apis/locales/ca/profile.json
+++ b/apis/locales/ca/profile.json
@@ -17,7 +17,7 @@
         "losses": "Derrotes: {{count}}"
     },
     "player_color": "Color del jugador:",
-    "gamo_result": "Resultat de la partida:",
+    "game_result": "Resultat de la partida:",
     "include_speeds": "Velocitats incloses:",
     "color_buttons": {
         "white": "Blanc",
