Fixes mistakes in German locales

--- a/apis/locales/de/donate.json
+++ b/apis/locales/de/donate.json
@@ -10,7 +10,7 @@
     },
     "features_for_patrons": {
         "question": "Sind einige Funktionen nur für Patreons reserviert?",
-        "answer": "Nein, hivegame ist für alle Nutzer für immer kostenlos. Aber als Patreon bekommst aber eine 👑."
+        "answer": "Nein, hivegame ist für alle Nutzer für immer kostenlos. Aber als Patreon bekommst du eine 👑."
     },
     "small_team_blurb": "Wir sind ein kleines Team, daher macht deine Unterstützung einen riesigen Unterschied!"
 }
