--- a/apis/locales/de/faq.json
+++ b/apis/locales/de/faq.json
@@ -9,7 +9,7 @@
         "answers": {
             "item1": "Du kannst uns helfen, indem du mit <source_link>programmierst</source_link>",
             "item2": "Du kannst uns mit Ideen, Feedback und Grafiken auf <discord_link>Discord</discord_link> unterstützen.",
-            "item3": "Du kannst mit einer <donate_link>Spende</donate_link> helfen die Hosting Kosten (und vielleicht irgendwann mal die Entwickler) zu bezahlen."
+            "item3": "Du kannst mit einer <donate_link>Spende</donate_link> helfen, die Hosting Kosten (und vielleicht irgendwann mal die Entwickler) zu bezahlen."
         }
     },
     "how_does_it_operate": {
