--- a/apis/locales/de/resources.json
+++ b/apis/locales/de/resources.json
@@ -33,7 +33,7 @@
         "title": "Bücher",
         "links": {
             "item1": "<hive_champion_link>Play Hive like a champion</hive_champion_link> Hive-Strategiebuch von Randy Ingersoll, dem Weltmeister von 2011.",
-            "item2": "<hive_canon_link>Canon of Hive: Groundwork</hive_canon_link> Erstes Buch einer geplanten Trilogie von mehrfachen Hive-Weltmeister Joe Schultz.",
+            "item2": "<hive_canon_link>Canon of Hive: Groundwork</hive_canon_link> Erstes Buch einer geplanten Trilogie vom mehrfachen Hive-Weltmeister Joe Schultz.",
             "item3": "<hive_puzzles_link>Hive-Puzzles</hive_puzzles_link> Kostenlose Sammlung von Hive-Puzzles mit Lösungen für Anfänger*innen bis Fortgeschrittene."
         }
     },
