Fixes comunity -> community

--- a/apis/locales/pt/resources.json
+++ b/apis/locales/pt/resources.json
@@ -25,7 +25,7 @@
         "links": {
             "item1": "<discord_link>Discord</discord_link> Junta-te ao chat da comunidade",
             "item2": "<reddit_link>Hive Subreddit</reddit_link> Partilha as tuas experiências e estratégias",
-            "item3": "<facebook_link>World Hive Comunity Facebook</facebook_link> Conecta com outros jogadores",
+            "item3": "<facebook_link>World Hive Community Facebook</facebook_link> Conecta com outros jogadores",
             "item4": "<instagram_link>Hive instagram</instagram_link> Fotos bonitas do Hive com memes"
         }
     },
