--- a/apis/locales/hu/resources.json
+++ b/apis/locales/hu/resources.json
@@ -20,7 +20,7 @@
         "links": {
             "item1": "<discord_link>Discord</discord_link> Csatlakozz a közösségi chathez",
             "item4": "<instagram_link>Hive instagram</instagram_link> Szép Hive fotók és mémek",
-            "item3": "<facebook_link>World Hive Comunity Facebook</facebook_link> Vedd fel a kapcsolatot más játékosokkal",
+            "item3": "<facebook_link>World Hive Community Facebook</facebook_link> Vedd fel a kapcsolatot más játékosokkal",
             "item2": "<reddit_link>Hive Subreddit</reddit_link> Oszd meg stratégiáidat és tapasztalataidat"
         }
     },
@@ -45,7 +45,7 @@
         "title": "Gen42 - Hive kiadó",
         "links": {
             "item1": "<gen42_link>Gen42 - vásárolj fizikai játékot itt.</gen42_link>",
-            "item3": "<facebook_link>World Hive Comunity Facebook</facebook_link>",
+            "item3": "<facebook_link>World Hive Community Facebook</facebook_link>",
             "item4": "<instagram_gen42_link>Gen42 - Instagram</instagram_gen42_link>",
             "item5": "<youtube_gen42_link>Gen42 - Youtube</youtube_gen42_link>",
             "item2": "<facebook_gen42_link>Gen42 - Facebook</facebook_gen42_link>"
