--- a/apis/locales/fr/profile.json
+++ b/apis/locales/fr/profile.json
@@ -16,10 +16,10 @@
         "all": "Tout"
     },
     "stats_box": {
-        "total": "Total : {{count}}",
-        "draws": "Matchs nuls : {{count}}",
-        "wins": "Victoires : {{count}}",
-        "losses": "Défaites : {{count}}"
+        "total": "Total",
+        "draws": "Matchs nuls",
+        "wins": "Victoires",
+        "losses": "Défaites"
     },
     "game_result": "Résultat de la partie :",
     "player_color": "Couleur du joueur :"
